--- a/package.json
+++ b/package.json
@@ -1,19 +1,35 @@
 {
-  "name": "test",
+  "name": "project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.0",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.13.4",
-    "@testing-library/jest-dom": "^5.16.5",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "@mui/icons-material": "^5.14.6",
+    "@mui/material": "^5.14.6",
+    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/node": "^20.5.7",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "antd": "^5.9.4",
+    "axios": "^1.5.0",
+    "bootstrap": "^5.3.1",
+    "chokidar": "^3.5.3",
+    "dayjs": "^1.11.10",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.13.0",
-    "react-scripts": "5.0.1",
-    "reactjs-popup": "^2.0.5",
+    "react-router-dom": "^6.16.0",
+    "react-scripts": "^5.0.1",
+    "react-signature-canvas": "^1.0.6",
+    "scss": "^0.2.4",
+    "styled-components": "^6.0.7",
+    "typescript": "4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,5 +55,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.3"
   }
 }
