--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@hookform/resolvers": "^3.3.1",
     "@mui/icons-material": "^5.14.6",
     "@mui/material": "^5.14.6",
     "@testing-library/jest-dom": "^5.17.0",
@@ -24,13 +25,16 @@
     "react-bootstrap": "^2.8.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-router-dom": "^6.16.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^3.0.1",
     "react-signature-canvas": "^1.0.6",
+    "react-table": "^7.8.0",
     "scss": "^0.2.4",
     "styled-components": "^6.0.7",
     "typescript": "4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zod": "^3.22.4"
   },
   "scripts": {
     "start": "react-scripts start",
